wip(remap): extract zipfs